<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="#000000"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/toolbar_icon"
            android:src="@drawable/ic_settings_white"
            android:layout_weight="0"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FFFFFF"
            android:text="@string/settings_title"
            android:textSize="18dp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/toolbar_menu"
            android:src="@drawable/ic_close_white"
            android:onClick="closeSettings"
            android:layout_weight="0"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="always"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:padding="10dp"
            android:orientation="vertical">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="2dp" >

                <ImageView
                    android:src="@drawable/ic_home_black"
                    android:layout_weight="0"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:textColor="#111111"
                    android:text="@string/settings_homepage"
                    android:textSize="14dp"/>

                <EditText
                    android:id="@+id/settings_homepage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="right|center_vertical"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:textColor="#666666"
                    android:paddingLeft="40dp"
                    android:paddingRight="10dp"
                    android:gravity="right|center_vertical"
                    android:textSize="12dp"
                    android:hint="Enter address"
                    android:lines="1"
                    android:textColorHint="#BBBBBB"
                    android:imeOptions="actionGo"
                    android:inputType="textUri"
                    android:background="@android:color/transparent"/>

            </LinearLayout>

            <View
                android:layout_weight="0"
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#FFCCCCCC" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="2dp" >

                <ImageView
                    android:src="@drawable/ic_search_black"
                    android:layout_weight="0"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:textColor="#111111"
                    android:text="@string/settings_search"
                    android:textSize="14dp"/>

                <TextView
                    android:id="@+id/settings_search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_gravity="right|center_vertical"
                    android:gravity="right|center_vertical"
                    android:layout_margin="10dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="10dp"
                    android:textColor="#666666"
                    android:text="Google"
                    android:textSize="12dp"
                    android:onClick="openSearchSelect"/>

            </LinearLayout>

            <View
                android:layout_weight="0"
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#FFCCCCCC" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="2dp" >

                <ImageView
                    android:src="@drawable/ic_code_black"
                    android:layout_weight="0"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#111111"
                    android:text="@string/settings_javascript"
                    android:textSize="14dp"/>

                <Switch
                    android:id="@+id/settings_javascript"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_weight="0"
                    android:splitTrack="false"
                    android:switchMinWidth="40dp"
                    android:switchPadding="4dp"
                    android:thumbTint="#3582f3"
                    android:trackTint="#666666"
                    tools:checked="true"
                    android:onClick="toggleJavascript"/>

            </LinearLayout>

            <View
                android:layout_weight="0"
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#FFCCCCCC" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="2dp" >

                <ImageView
                    android:src="@drawable/ic_fingerprint_black"
                    android:layout_weight="0"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#111111"
                    android:text="@string/settings_private"
                    android:textSize="14dp"/>

                <Switch
                    android:id="@+id/settings_private"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_weight="0"
                    android:splitTrack="false"
                    android:switchMinWidth="40dp"
                    android:switchPadding="4dp"
                    android:thumbTint="#3582f3"
                    android:trackTint="#666666"
                    tools:checked="false"
                    android:onClick="togglePrivate"/>

            </LinearLayout>

            <View
                android:layout_weight="0"
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#FFCCCCCC" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="2dp" >

                <ImageView
                    android:src="@drawable/ic_top_black"
                    android:layout_weight="0"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#111111"
                    android:text="@string/settings_urlbar"
                    android:textSize="14dp"/>

                <Switch
                    android:id="@+id/settings_topbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_weight="0"
                    android:splitTrack="false"
                    android:switchMinWidth="40dp"
                    android:switchPadding="4dp"
                    android:thumbTint="#3582f3"
                    android:trackTint="#666666"
                    tools:checked="false"
                    android:onClick="toggleUrlBar"/>

            </LinearLayout>

            <View
                android:layout_weight="0"
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#FFCCCCCC" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="2dp" >

                <ImageView
                    android:src="@drawable/ic_visibility_black"
                    android:layout_weight="0"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#111111"
                    android:text="@string/settings_autohide"
                    android:textSize="14dp"/>

                <Switch
                    android:id="@+id/settings_autohide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_weight="0"
                    android:splitTrack="false"
                    android:switchMinWidth="40dp"
                    android:switchPadding="4dp"
                    android:thumbTint="#3582f3"
                    android:trackTint="#666666"
                    tools:checked="false"
                    android:onClick="toggleToolbarAutohide"/>

            </LinearLayout>

            <View
                android:layout_weight="0"
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#FFCCCCCC" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="2dp" >

                <ImageView
                    android:src="@drawable/ic_desktop_black"
                    android:layout_weight="0"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#111111"
                    android:text="@string/settings_desktop"
                    android:textSize="14dp"/>

                <Switch
                    android:id="@+id/settings_desktop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_weight="0"
                    android:splitTrack="false"
                    android:switchMinWidth="40dp"
                    android:switchPadding="4dp"
                    android:thumbTint="#3582f3"
                    android:trackTint="#666666"
                    tools:checked="false"
                    android:onClick="toggleDesktop"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>