<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/popupmenu"
    android:paddingLeft="2dp"
    android:paddingRight="2dp"
    android:paddingTop="2.25dp"
    android:paddingBottom="2.25dp"
    android:onClick="closeMenu">

    <RelativeLayout
        android:id="@+id/options_menu"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:gravity="right"
        android:onClick="doNothing"
        android:background="@drawable/popup_background">

        <LinearLayout
            android:layout_centerHorizontal="true"
            android:id="@+id/menu_tools"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_weight="0"
            android:orientation="horizontal"
            android:gravity="left"
            android:padding="8dp">

            <ImageView
                android:id="@+id/menu_tools_addbookmark"
                android:src="@drawable/ic_star_empty"
                android:onClick="addBookmark"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_margin="10dp" />

            <ImageView
                android:id="@+id/menu_tools_removebookmark"
                android:src="@drawable/ic_star_full"
                android:onClick="removeBookmark"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_margin="10dp" />

            <ImageView
                android:id="@+id/menu_tools_home"
                android:src="@drawable/ic_home"
                android:onClick="loadHome"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_margin="10dp" />

            <ImageView
                android:id="@+id/menu_tools_share"
                android:src="@drawable/ic_share"
                android:onClick="share"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/menu_tools_menu"
                android:src="@drawable/ic_more_vert"
                android:onClick="closeMenu"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_margin="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/menu_tools"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/menu_items_bookmarks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/options_bookmarks"
                android:onClick="openBookmarks"
                android:textColor="@color/toolbarTextLight"
                android:padding="14dp" />

            <TextView
                android:id="@+id/menu_items_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/options_history"
                android:onClick="openHistory"
                android:textColor="@color/toolbarTextLight"
                android:padding="14dp" />

            <TextView
                android:id="@+id/menu_items_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/options_settings"
                android:onClick="openSettings"
                android:textColor="@color/toolbarTextLight"
                android:padding="14dp" />

            <TextView
                android:id="@+id/menu_items_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/options_help"
                android:onClick="openHelp"
                android:textColor="@color/toolbarTextLight"
                android:padding="14dp" />

        </LinearLayout>



        <LinearLayout
            android:id="@+id/menu_controls"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_below="@id/menu_items"
            android:layout_weight="0"
            android:orientation="horizontal"
            android:gravity="right"
            android:padding="8dp">


                <ImageView
                    android:id="@+id/menu_control_back"
                    android:src="@drawable/ic_arrow_back"
                    android:onClick="pageBack"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp" />

                <ImageView
                    android:id="@+id/menu_control_forward"
                    android:src="@drawable/ic_arrow_forward"
                    android:onClick="pageForward"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp" />

                <ImageView
                    android:id="@+id/menu_control_refresh"
                    android:src="@drawable/ic_refresh"
                    android:onClick="reloadPage"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp" />

                <ImageView
                    android:id="@+id/menu_control_stop"
                    android:src="@drawable/ic_stop"
                    android:onClick="stopLoad"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <ImageView
                    android:id="@+id/menu_control_menu"
                    android:src="@drawable/ic_more_vert"
                    android:onClick="closeMenu"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp" />

        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>